--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,341 @@
 body {
     margin: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #000;
+    background-image: linear-gradient(to bottom, #28282c, #3f3e3e);
+  }
+
+  #whitelist {
+    position: absolute;
+    top: 180%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+
+  #steam:hover {
+    background-color: #333;
+    outline: 10px solid #333;
+  }
+
+  #steam:active {
+    background-color: #444;
+    outline: 10px solid #444;
+  }
+
+  #image01 {
+    position: absolute;
+    top: 230%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    height: 300px;
+    outline: 2px solid #c4891c;
+  }
+
+  #image01:hover {
+    outline: 4px solid #c4891c;
+  }
+  #image01:active {
+    outline: 6px solid #c4891c;
+  }
+
+
+  #title01 {
+    position: absolute;
+    top: 250%;
+    left: 20.5%;
+    transform: translate(-50%, -50%);
+    color: #f2f2f2;
+    text-align: left;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+
+  #text01 {
+    position: absolute;
+    top: 260%;
+    left: 30%;
+    width: 800px;
+    transform: translate(-50%, -50%);
+    border-radius: 10%;
+    text-align: left;
+    font-size: 20px;
+  }
+
+  #image02 {
+    position: absolute;
+    top: 280%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    height: 300px;
+    outline: 2px solid #c4891c;
+  }
+
+  #image02:hover {
+    outline: 4px solid #c4891c;
+  }
+  #image02:active {
+    outline: 6px solid #c4891c;
+  }
+
+  #title02 {
+    position: absolute;
+    top: 300%;
+    left: 64%;
+    transform: translate(-50%, -50%);
+    color: #f2f2f2;
+    text-align: left;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+
+  #text02 {
+    position: absolute;
+    top: 310%;
+    left: 75%;
+    width: 800px;
+    transform: translate(-50%, -50%);
+    border-radius: 10%;
+    text-align: left;
+    font-size: 20px;
+  }
+
+  #image03 {
+    position: absolute;
+    top: 330%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    height: 300px;
+    outline: 2px solid #c4891c;
+  }
+
+  #image03:hover {
+    outline: 4px solid #c4891c;
+  }
+  #image03:active {
+    outline: 6px solid #c4891c;
+  }
+
+  #title03 {
+    position: absolute;
+    top: 350%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    color: #f2f2f2;
+    text-align: left;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+
+  #text03 {
+    position: absolute;
+    top: 360%;
+    left: 30%;
+    width: 800px;
+    transform: translate(-50%, -50%);
+    border-radius: 10%;
+    text-align: left;
+    font-size: 20px;
+  }
+
+  #image04 {
+    position: absolute;
+    top: 380%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    height: 300px;
+    outline: 2px solid #c4891c;
+  }
+
+  #image04:hover {
+    outline: 4px solid #c4891c;
+  }
+  #image04:active {
+    outline: 6px solid #c4891c;
   }
   
-  #titel {
+  #title04 {
     position: absolute;
+    top: 400%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    color: #f2f2f2;
+    text-align: left;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+
+  #text04 {
+    position: absolute;
+    top: 410%;
+    left: 75%;
+    width: 800px;
+    transform: translate(-50%, -50%);
+    border-radius: 10%;
+    text-align: left;
+    font-size: 20px;
+  }
+  
+  #steam {
+    background-color: #222;
+    outline: 10px solid #222;
+    position: absolute;
+    top: 195%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
+    border-radius: 10%;
+  }
+
+  h3 {
+    position: absolute;
+    top: 160%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffa600; 
+    text-align: center;
+    font-size: 70px;
+    font-family: Arial, Helvetica, sans-serif
+  }
+  
+  #trailer_button {
+    position: absolute;
+    top: 112%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #2c539b;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+
+
+  }
+
+  #trailer_button:hover {
+    background-color: #3a6bc5;
+  }
+
+  p {
+    color: #f2f2f2;
+    text-align: center;
+    position: absolute;
+    font-size: 30px;
+    top: 140%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Space Mono", "Fira Code", "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    
+  }
+  h2 {
+    color: #f2f2f2;
+    text-align: center;
+    position: absolute;
+    font-size: 50px;
     top: 120%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
+    font-family: "Space Mono", "Fira Code", "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+  h1 {
+    color: #f2f2f2;
+    text-align: center;
+    position: absolute;
+    font-size: 50px;
+    top: 120%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Space Mono", "Fira Code", "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
+  #trailer {
+    position: absolute;
+    top: 150%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .topnav {
+    position: fixed;
     overflow: hidden;
-    height: 50px;
-    background-color: rgba(56, 52, 52, 0.7);
-    width: 30%;
+    height: 80px;
+    background-color: #28282c;
+    width: 100%;
     position: relative;
     top: 0;
-    left: 50%;
-    transform: translate(-50%, 10px);
-    backdrop-filter: blur(20px);
+    left: 0%;
     z-index: 1;
   }
   .topnav a {
     display: inline-block;
     color: #f2f2f2;
     text-align: center;
-    padding: 20px 16px;
+    padding: 20px 30px;
     text-decoration: none;
     font-size: 30px;
     position: relative;
     top: 50%;
-    left: 20%;
+    left: 33%;
     transform: translate(-50%, -50%);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
   
-  .topnav a:hover {
-    background-color: rgba(29, 28, 28, 0.7)
+  #arrow {
+    width: 8%;
+    position: absolute;
+    top: 80%;
+    left: 47%;
+    animation: bounce 2s infinite;
   }
 
-  #LOGO {
-    width: 25%;
-    height: 70%;
-    position: relative;
-    top: 17%;
-    left: 15%;
-    transform: translate(-50%, -50%);
+  @keyframes bounce {
+    0% {
+      top: 80%;
+    }
+    50% {
+      top: 82%;
+    }
+    100% {
+      top: 80%;
+    }
   }
 
   #background {
     width: 100%;
-    height: 100%;
+    height: 120%;
     position: absolute;
-    top: 0;
+    top: -15%;
     left: 0;
-    box-shadow: 0 0 20em 5em #000,
-                0 -80em 40em -40em #000,
-                0 0 0 1000px #000;
     z-index: -1;
   }
 
+  .footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: #ccc;
+    font-size: 0.9rem;
+    margin-top: 2rem;
+    border-top: 2px solid #444;
+    position: absolute;
+  }
+
+  #copyright {
+    position: absolute;
+    top: 450%;
+    left: 50%;
+  }
