--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-image: linear-gradient(to bottom, #28282c, #3f3e3e);
+    background-image: linear-gradient(to bottom, #101011, #3f3e3e);
   }
 
   #whitelist {
